--- a/package.json
+++ b/package.json
@@ -1,21 +1,34 @@
 {
   "name": "video-squisher",
+  "productName": "Video Squisher",
   "version": "1.0.0",
   "license": "MIT",
   "main": "dist/main/main.js",
   "type": "commonjs",
   "scripts": {
+    "clean": "rm -rf dist out",
     "build": "yarn tsc -p tsconfig.main.json && vite build",
-    "start": "electron dist/main/main.js"
+    "start": "electron dist/main/main.js",
+    "forge": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "yarn clean && yarn build && electron-forge make",
+    "publish": "electron-forge publish"
+  },
+  "config": {
+    "forge": "./forge.config.js"
   },
   "dependencies": {
     "classnames": "^2.5.1",
     "ffmpeg-static": "^5.2.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-dropzone": "^14.3.8"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@electron-forge/cli": "^7.8.2",
+    "@electron-forge/maker-deb": "^7.8.2",
+    "@electron-forge/maker-dmg": "^7.8.2",
+    "@electron-forge/maker-squirrel": "^7.8.2",
+    "@electron-forge/maker-zip": "^7.8.2",
     "@tailwindcss/vite": "^4.1.11",
     "@types/ffmpeg-static": "^5.1.0",
     "@types/react": "^19.1.8",
