--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,4 @@
 {
-  "compilerOptions": {
-    "target": "ESNext",
-    "module": "ESNext",
-    "jsx": "react-jsx",
-    "strict": true,
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "types": ["react", "react-dom"],
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["src/renderer/*"] // viktiga raden
-    }
-  },
-  "include": ["src"]
+  "files": [],
+  "references": [{ "path": "./tsconfig.main.json" }, { "path": "./tsconfig.renderer.json" }]
 }
