--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,17 @@
 {
-  "files": [],
-  "references": [{ "path": "./tsconfig.main.json" }, { "path": "./tsconfig.renderer.json" }]
+  "compilerOptions": {
+    "target": "ESNext",
+    "module": "ESNext",
+    "jsx": "react-jsx",
+    "moduleResolution": "bundler",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/renderer/*"],
+      "css/*": ["src/renderer/css/*"]
+    }
+  },
+  "include": ["src", "electron.vite.config.ts"]
 }
